# Leet_Vibe

./: .gitignore  COPILOT_MCP_GUIDE.md  copilot-mcp-config-example.json  html_to_markdown_converter.py  mcp-vscode-config-example.json  test-copilot-mcp.py  test_zip_mcp.py
CVing/: CJ_Duan_CV_Enhanced.docx  CJ_Duan_CV_Enhanced.txt  CJ_Duan_Causal_Inference_DS_CV_2024_v3.docx  CJ_Duan_Causal_Inference_DS_CV_2024_v3_extracted.txt  README.md  enhance_cv.py  read_docx.py  txt_to_docx.py
MDConverter/: OPTIMIZATION_SUMMARY.md  ORGANIZATION_SUMMARY.md  README.md  README_NEW.md  README_OLD.md  README_html_converter.md  html_to_markdown_converter.py  requirements.txt  setup.py  setup_converter.sh
TDS/: AI_Agents_Future_of_Work.md  Change-Aware Data Validation with Column-Level Lineage.md  Hitchhiker’s Guide to RAG with ChatGPT API and LangChain.md  ai_is_not_a_black_box_summary.md  mcp.md  (+8 more)
mdconverter-mcp/: README.md  REVISION_SUMMARY.md  SETUP_GUIDE.md  TEST_RESULTS.md  mcp_config_venv.json  pyproject.toml  test_conversion.py  test_medium.py  test_medium_fixed.py  vscode_mcp_config.json
mdconverter-mcp/chat_demo_output/: Accuracy Is Dead_ Calibration, Discrimination, and Other Metrics You Actually Need _ Towards Data Science.md
mdconverter-mcp/chat_demo_output/images/: image(2)
mdconverter-mcp/src/mdconverter_mcp/: server.py
mdconverter-mcp/test_output/images/: image  image(3)
mdconverter-mcp/test_output_medium/: Capturing The Long-Term Causal Effect Of Brand Marketing _ by Ryan O'Sullivan _ Jul, 2025 _ Medium.md
mdconverter-mcp/tests/: test_server.py
(+70 files in other folders)
